include/dss_capi.h

    DSS_CAPI_DLL void LineGeometries_Get_Units(int32_t** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Units_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Units(int32_t *ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Xcoords(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Xcoords_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Xcoords(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Ycoords(double** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Ycoords_GR(void);
    DSS_CAPI_DLL void LineGeometries_Set_Ycoords(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineGeometries_Get_Conductors(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_Conductors_GR(void);
    DSS_CAPI_DLL uint16_t LineGeometries_Get_Reduce(void);
    DSS_CAPI_DLL void LineGeometries_Set_Reduce(uint16_t Value);
    DSS_CAPI_DLL double LineGeometries_Get_RhoEarth(void);
    DSS_CAPI_DLL void LineGeometries_Set_RhoEarth(double Value);
    DSS_CAPI_DLL double LineGeometries_Get_NormAmps(void);
    DSS_CAPI_DLL void LineGeometries_Set_NormAmps(double Value);
    DSS_CAPI_DLL double LineGeometries_Get_EmergAmps(void);
    DSS_CAPI_DLL void LineGeometries_Set_EmergAmps(double Value);
    DSS_CAPI_DLL void LineGeometries_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL void LineGeometries_Get_AllNames_GR(void);
    DSS_CAPI_DLL int32_t LineGeometries_Get_idx(void);
    DSS_CAPI_DLL void LineGeometries_Set_idx(int32_t Value);