src/v8/CAPI_LineGeometries.pas


//------------------------------------------------------------------------------
function LineGeometries_Get_Reduce(): Wordbool; CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    Result := FALSE;
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    Result := pLineGeometry.FReduce;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_Reduce(Value: Wordbool); CDECL;
var
    pLineGeometry: TLineGeometryObj;

begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        DataChanged := TRUE;
        FReduce := Value;
    end;
end;
//------------------------------------------------------------------------------
function LineGeometries_Get_RhoEarth(): Double; CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    Result := pLineGeometry.RhoEarth;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_RhoEarth(Value: Double); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        RhoEarth := Value;
        DataChanged := TRUE;
    end;
end;
//------------------------------------------------------------------------------
function LineGeometries_Get_NormAmps(): Double; CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    Result := pLineGeometry.NormAmps;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_NormAmps(Value: Double); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    pLineGeometry.NormAmps := Value;
end;
//------------------------------------------------------------------------------
function LineGeometries_Get_EmergAmps(): Double; CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    Result := pLineGeometry.EmergAmps;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_EmergAmps(Value: Double); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    pLineGeometry.EmergAmps := Value;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_Units(ValuePtr: PInteger; ValueCount: Integer); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        if Nconds <> ValueCount then
        begin
            DoSimpleMsg('Invalid number of items sent via C-API. Please enter a value within range.', 189);
            Exit;
        end;
        Move(ValuePtr[0], FUnits[1], ValueCount * SizeOf(Double));
        DataChanged := TRUE;
    end;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Get_Units(var ResultPtr: PInteger; ResultCount: PInteger); CDECL;
var
    Result: PIntegerArray;
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then 
    begin
        Result := DSS_RecreateArray_PInteger(ResultPtr, ResultCount, 1);
        Result[0] := 0;
        Exit;
    end;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        DSS_RecreateArray_PInteger(Result, ResultPtr, ResultCount, Nconds);
        Move(FUnits[1], ResultPtr[0], Nconds * SizeOf(Integer));
    end;
end;

procedure LineGeometries_Get_Units_GR(); CDECL;
// Same as LineGeometries_Get_Units but uses global result (GR) pointers
begin
    LineGeometries_Get_Units(GR_DataPtr_PInteger, GR_CountPtr_PInteger)
end;

//------------------------------------------------------------------------------
procedure LineGeometries_Set_Ycoords(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        if Nconds <> ValueCount then
        begin
            DoSimpleMsg('Invalid number of items sent via C-API. Please enter a value within range.', 188);
            Exit;
        end;
        Move(ValuePtr[0], FY[1], ValueCount * SizeOf(Double));
        DataChanged := TRUE;
    end;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Get_Ycoords(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then 
    begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 1);
        Result[0] := 0;
        Exit;
    end;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        DSS_RecreateArray_PDouble(Result, ResultPtr, ResultCount, Nconds);
        Move(FY[1], ResultPtr[0], Nconds * SizeOf(Double));
    end;
end;

procedure LineGeometries_Get_Ycoords_GR(); CDECL;
// Same as LineGeometries_Get_Ycoords but uses global result (GR) pointers
begin
    LineGeometries_Get_Ycoords(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure LineGeometries_Set_Xcoords(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        if Nconds <> ValueCount then
        begin
            DoSimpleMsg('Invalid number of items sent via C-API. Please enter a value within range.', 187);
            Exit;
        end;
        Move(ValuePtr[0], FX[1], ValueCount * SizeOf(Double));
        DataChanged := TRUE;
    end;
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Get_Xcoords(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    pLineGeometry: TLineGeometryObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then 
    begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 1);
        Result[0] := 0;
        Exit;
    end;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        DSS_RecreateArray_PDouble(Result, ResultPtr, ResultCount, Nconds);
        Move(FX[1], ResultPtr[0], Nconds * SizeOf(Double));
    end;
end;

procedure LineGeometries_Get_Xcoords_GR(); CDECL;
// Same as LineGeometries_Get_Xcoords but uses global result (GR) pointers
begin
    LineGeometries_Get_Xcoords(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure LineGeometries_Get_Conductors(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
    pLineGeometry: TLineGeometryObj;
    i: Integer;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, (0) + 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    pLineGeometry := LineGeometryClass[ActiveActor].GetActiveObj;
    with pLineGeometry do
    begin
        DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, (Nconds - 1) + 1);
        for i := 1 to Nconds do
            Result[i - 1] := DSS_CopyStringAsPChar(ConductorName[i]);
    end;
end;

procedure LineGeometries_Get_Conductors_GR(); CDECL;
// Same as LineGeometries_Get_Conductors but uses global result (GR) pointers
begin
    LineGeometries_Get_Conductors(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
procedure LineGeometries_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
    LineGeometryElem: TLineGeometryObj;
    k: Integer;

begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    if LineGeometryClass[ActiveActor].ElementList.ListSize <= 0 then Exit;
    DSS_RecreateArray_PPAnsiChar(Result, ResultPtr, ResultCount, LineGeometryClass[ActiveActor].ElementList.ListSize);
    k := 0;
    LineGeometryElem := LineGeometryClass[ActiveActor].ElementList.First;
    while LineGeometryElem <> NIL do
    begin
        Result[k] := DSS_CopyStringAsPChar(LineGeometryElem.Name);
        Inc(k);
        LineGeometryElem := LineGeometryClass[ActiveActor].ElementList.Next;
    end;
end;

procedure LineGeometries_Get_AllNames_GR(); CDECL;
// Same as LineGeometries_Get_AllNames but uses global result (GR) pointers
begin
    LineGeometries_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;

//------------------------------------------------------------------------------
function LineGeometries_Get_idx(): Integer; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := LineGeometryClass[ActiveActor].ElementList.ActiveIndex
    else
        Result := 0
end;
//------------------------------------------------------------------------------
procedure LineGeometries_Set_idx(Value: Integer); CDECL;
begin
    if ActiveCircuit[ActiveActor] = NIL then Exit;
    if LineGeometryClass[ActiveActor].ElementList.Get(Value) = NIL then
        DoSimpleMsg('Invalid LineGeometry index: "' + IntToStr(Value) + '".', 656565);
end;
//------------------------------------------------------------------------------
end.
